tests/NormalTests/paczka1/small_fuzzy/36834868.err
Error in line 3: A@11 S351 1@7,9
Error in line 4: LNhCg6L S351 9,1
